--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="app.js" charset="utf-8"></script>
 </head>
 <body>
-
+    <div class="score-board">
+        <h3>Score</h3>
+        <h3 id="score"></h3>
+    </div>
     <div class="grid"></div>
     
 </body>
